<resources>
    <string name="app_name">UdacityTutorial2</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="box_yellow">Yellow</string>
    <string name="box_red">Red</string>
    <string name="box_green">Green</string>
    <string name="how_to_play">How to Play</string>
    <string name="tap_screen_and_buttons">Tap screen and the buttons</string>
</resources>
